--- a/james.html
+++ b/james.html
@@ -105,7 +105,7 @@
     </nav>
 
     <header>
-        <img src="https://pbs.twimg.com/profile_images/1009103047027503105/nY8sXdsp_400x400.jpg" alt="James Kettle">
+        <img src="https://i.imgur.com/wyyUneS.jpeg" alt="James Kettle">
         <h1>James 'albinowax' Kettle</h1>
         <p>Director of Research at PortSwigger</p>
     </header>
